@@ -361,8 +361,8 @@
                 <div class="result-box no-link" id="tokenResult">
                     <div class="row result-row">
                         <div class="col s4 result-large">
-                            <div class="result-large-number" id="tokenResultLoveca"></div>
-                            <div class="result-large-label">Loveca Needed</div>
+                            <div class="result-large-number" id="tokenResultRefills"></div>
+                            <div class="result-large-label">Refills Needed</div>
                         </div>
                         <div class="col s4 result-large">
                             <div class="result-large-number" id="tokenResultEventLiveCount"></div>
@@ -376,8 +376,12 @@
                     <ul class="collapsible small-collapsible z-depth-0 recovery-items" style="opacity: 0;"
                         data-collapsible="expandable">
                         <li>
-                            <div class="collapsible-header grey lighten-5">Alternative LP Recovery Items</div>
+                            <div class="collapsible-header grey lighten-5">LP Recovery Items</div>
                             <div class="collapsible-body grey lighten-5">
+                                <div class="result-small">
+                                    <div class="result-small-label">Loveca Stones Needed</div>
+                                    <div class="result-small-number" id="tokenResultLoveca"></div>
+                                </div>
                                 <div class="result-small">
                                     <div class="result-small-label">Sugar Pots [100% LP] Needed</div>
                                     <div class="result-small-number" id="tokenResultSugarPots100"></div>
@@ -639,8 +643,8 @@
                 <div class="result-box no-link" id="scoremResult">
                     <div class="row result-row">
                         <div class="col s6 result-large">
-                            <div class="result-large-number" id="scoremResultLoveca"></div>
-                            <div class="result-large-label">Loveca Needed</div>
+                            <div class="result-large-number" id="scoremResultRefills"></div>
+                            <div class="result-large-label">Refills Needed</div>
                         </div>
                         <div class="col s6 result-large">
                             <div class="result-large-number" id="scoremResultLiveCount"></div>
@@ -650,8 +654,12 @@
                     <ul class="collapsible small-collapsible z-depth-0 recovery-items" style="opacity: 0;"
                         data-collapsible="expandable">
                         <li>
-                            <div class="collapsible-header grey lighten-5">Alternative LP Recovery Items</div>
+                            <div class="collapsible-header grey lighten-5">LP Recovery Items</div>
                             <div class="collapsible-body grey lighten-5">
+                                <div class="result-small">
+                                    <div class="result-small-label">Loveca Stones Needed</div>
+                                    <div class="result-small-number" id="scoremResultLoveca"></div>
+                                </div>
                                 <div class="result-small">
                                     <div class="result-small-label">Sugar Pots [100% LP] Needed</div>
                                     <div class="result-small-number" id="scoremResultSugarPots100"></div>
@@ -963,8 +971,8 @@
                 <div class="result-box no-link" id="medfesResult">
                     <div class="row result-row">
                         <div class="col s6 result-large">
-                            <div class="result-large-number" id="medfesResultLoveca"></div>
-                            <div class="result-large-label">Loveca Needed</div>
+                            <div class="result-large-number" id="medfesResultRefills"></div>
+                            <div class="result-large-label">Refills Needed</div>
                         </div>
                         <div class="col s6 result-large">
                             <div class="result-large-number" id="medfesResultLiveCount"></div>
@@ -974,8 +982,12 @@
                     <ul class="collapsible small-collapsible z-depth-0 recovery-items" style="opacity: 0;"
                         data-collapsible="expandable">
                         <li>
-                            <div class="collapsible-header grey lighten-5">Alternative LP Recovery Items</div>
+                            <div class="collapsible-header grey lighten-5">LP Recovery Items</div>
                             <div class="collapsible-body grey lighten-5">
+                                <div class="result-small">
+                                    <div class="result-small-label">Loveca Stones Needed</div>
+                                    <div class="result-small-number" id="medfesResultLoveca"></div>
+                                </div>
                                 <div class="result-small">
                                     <div class="result-small-label">Sugar Pots [100% LP] Needed</div>
                                     <div class="result-small-number" id="medfesResultSugarPots100"></div>
@@ -1303,8 +1315,8 @@
                 <div class="result-box no-link" id="chafesResult">
                     <div class="row result-row">
                         <div class="col s6 result-large">
-                            <div class="result-large-number" id="chafesResultLoveca"></div>
-                            <div class="result-large-label">Loveca Needed</div>
+                            <div class="result-large-number" id="chafesResultRefills"></div>
+                            <div class="result-large-label">Refills Needed</div>
                         </div>
                         <div class="col s6 result-large">
                             <div class="result-large-number" id="chafesResultLiveCount"></div>
@@ -1314,8 +1326,12 @@
                     <ul class="collapsible small-collapsible z-depth-0 recovery-items" style="opacity: 0;"
                         data-collapsible="expandable">
                         <li>
-                            <div class="collapsible-header grey lighten-5">Alternative LP Recovery Items</div>
+                            <div class="collapsible-header grey lighten-5">LP Recovery Items</div>
                             <div class="collapsible-body grey lighten-5">
+                                <div class="result-small">
+                                    <div class="result-small-label">Loveca Stones Needed</div>
+                                    <div class="result-small-number" id="chafesResultLoveca"></div>
+                                </div>
                                 <div class="result-small">
                                     <div class="result-small-label">Sugar Pots [100% LP] Needed</div>
                                     <div class="result-small-number" id="chafesResultSugarPots100"></div>
@@ -1587,8 +1603,8 @@
                 <div class="result-box no-link" id="rallyResult">
                     <div class="row result-row">
                         <div class="col s6 result-large">
-                            <div class="result-large-number" id="rallyResultLoveca"></div>
-                            <div class="result-large-label">Loveca Needed</div>
+                            <div class="result-large-number" id="rallyResultRefills"></div>
+                            <div class="result-large-label">Refills Needed</div>
                         </div>
                         <div class="col s6 result-large">
                             <div class="result-large-number" id="rallyResultLiveCount"></div>
@@ -1598,8 +1614,12 @@
                     <ul class="collapsible small-collapsible z-depth-0 recovery-items" style="opacity: 0;"
                         data-collapsible="expandable">
                         <li>
-                            <div class="collapsible-header grey lighten-5">Alternative LP Recovery Items</div>
+                            <div class="collapsible-header grey lighten-5">LP Recovery Items</div>
                             <div class="collapsible-body grey lighten-5">
+                                <div class="result-small">
+                                    <div class="result-small-label">Loveca Stones Needed</div>
+                                    <div class="result-small-number" id="rallyResultLoveca"></div>
+                                </div>
                                 <div class="result-small">
                                     <div class="result-small-label">Sugar Pots [100% LP] Needed</div>
                                     <div class="result-small-number" id="rallyResultSugarPots100"></div>
@@ -1891,8 +1911,8 @@
                 <div class="result-box no-link" id="friendmResult">
                     <div class="row result-row">
                         <div class="col s6 result-large">
-                            <div class="result-large-number" id="friendmResultLoveca"></div>
-                            <div class="result-large-label">Loveca Needed</div>
+                            <div class="result-large-number" id="friendmResultRefills"></div>
+                            <div class="result-large-label">Refills Needed</div>
                         </div>
                         <div class="col s6 result-large">
                             <div class="result-large-number" id="friendmResultLiveCount"></div>
@@ -1902,8 +1922,12 @@
                     <ul class="collapsible small-collapsible z-depth-0 recovery-items" style="opacity: 0;"
                         data-collapsible="expandable">
                         <li>
-                            <div class="collapsible-header grey lighten-5">Alternative LP Recovery Items</div>
+                            <div class="collapsible-header grey lighten-5">LP Recovery Items</div>
                             <div class="collapsible-body grey lighten-5">
+                                <div class="result-small">
+                                    <div class="result-small-label">Loveca Stones Needed</div>
+                                    <div class="result-small-number" id="friendmResultLoveca"></div>
+                                </div>
                                 <div class="result-small">
                                     <div class="result-small-label">Sugar Pots [100% LP] Needed</div>
                                     <div class="result-small-number" id="friendmResultSugarPots100"></div>
