@@ -1,3 +1,10 @@
+October 11, 2019 - Coming Back For More Edition
+----------------------------
+- Bringing some changes from the SIFAS Calc back to here
+- "Loveca Needed" was changed to "Refills Needed", Loveca Stone count moved to the Recovery Items dropdown
+- Optimized stylesheet a little
+- Removed non-favicon icons from the download list
+
 October 4, 2019 - Long Overdue Edition
 ----------------------------
 - Added multipliers to MedFes
